# Earth

./: README.md
Earth-lcr/: OpenGLEarth3d.sln
Earth-lcr/Debug/: OpenGLEarth3d.ilk
Earth-lcr/Debug/data/: shader.fs
Earth-lcr/OpenGLEarth3d/: CMakeLists.txt  OpenGLEarth3d.vcxproj  OpenGLEarth3d.vcxproj.filters  main.cpp
Earth-lcr/OpenGLEarth3d/3rdPartys/glfw-3.3.6/lib/Win32/Debug/: glfw3.lib
Earth-lcr/OpenGLEarth3d/3rdPartys/glfw-3.3.6/lib/Win32/Release/: glfw3.lib
Earth-lcr/OpenGLEarth3d/Debug/: OpenGLEarth3d.exe.recipe  OpenGLEarth3d.ilk  vc141.idb  vc143.idb
Earth-lcr/OpenGLEarth3d/Debug/OpenGLEarth3d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGLEarth3d.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Earth-lcr/OpenGLEarth3d/data/: pcssshader.fs  shader.fs  shader.gs
Earth-lcr/Release/data/: shader.fs  shaderSkybox.fs  shaderSkybox.vs
